--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         
         <h2>Links de referências</h2>
         <ul>
-            <li><a href="https://dio.me/track/santander-2025-front-end" target="_blank">Santander 2025 - Front-End</a></li>
+            <li><a href="https://web.dio.me/track/santander-2025-front-end" target="_blank">Santander 2025 - Front-End</a></li>
             <li><a href="https://www.w3schools.com/html/" target="_blank">W3 Schools - HTML</a></li>
             <li><a href="https://www.w3schools.com/html/html_forms.asp" target="_blank">W3 Schools - Forms</a></li>
             <li><a href="https://www.w3schools.com/html/html_formatting.asp" target="_blank">W3 Schools - Formatting</a></li>
